# wlsctx

./: Cargo.toml  Dockerfile  README.md  docker-bake.hcl  wlsctx.py
containers/apps/base/: Containerfile
containers/apps/devtools/: Containerfile
containers/apps/java/: Containerfile
containers/apps/jetbrains/: Containerfile  jbr.docker  umoci.docker
containers/apps/librewolf/: Containerfile  librewolf.build
containers/apps/runtime/: Containerfile
containers/apps/rust/: Containerfile
containers/apps/shell/: Containerfile
containers/apps/socat/: Containerfile
containers/apps/wayland/: Containerfile
containers/apps/xdg-dbus-proxy/: Containerfile  Containerfile.fedora
containers/apps/xwayland-satellite/: Containerfile
containers/systemd/: app-podman-debug@.container  app-podman-devel@.container.base  app-podman-intellij\x2didea\x2dultimate@.container  app-podman-librewolf@.container  app-podman-rustrover@.container  app-podman-rustrover@.container.d  ext-rustrover.image  librewolf.image  wl-app-librewolf@.container  wl-app-xwayland@.container  wl-app@.network  wl-app@.pod  wl-dbus@.container  wl-display@.container  wl-pod-runtime-dir@.volume  wl-ssh-agent@.container  wl-xwayland@.container  wlsctx.image  wlsctx@.container  xwayland-satellite.image
containers/systemd/app-podman-.container.d/: 00-pod-defaults.conf  01-app-defaults.conf  10-wayland-accel.conf
containers/systemd/wl-.container.d/: 00-pod-defaults.conf  (+1 more)
selinux/: wl_dbus_proxy.cil  wlsctx.cil
src/: main.rs
systemd/user/: wl-dbus-nocontainer@.service  wlsctx@.service  wlsctx@.socket
(+3 files in other folders)
